--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  <!-- Definición del conjunto de caracteres para soportar acentos y caracteres especiales -->
   <meta charset="UTF-8" />
+
+  <!-- Hace que el sitio sea responsive (adaptable a móviles, tablets y computadoras) -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Título que aparece en la pestaña del navegador y en Google -->
   <title>Consultoría Financiera para Pequeños Empresarios</title>
 
   <style>
+    /* =====================
+       ESTILOS GENERALES
+       ===================== */
     body {
       font-family: 'Segoe UI', Arial, sans-serif;
       margin: 0;
@@ -13,9 +21,12 @@
       color: #1f2937;
     }
 
+    /* =====================
+       ENCABEZADO (HERO)
+       ===================== */
     header {
       background: linear-gradient(rgba(15,23,42,0.85), rgba(15,23,42,0.85)),
-        url('https://images.unsplash.com/photo-1554224155-6726b3ff858f');
+                  url('https://images.unsplash.com/photo-1554224155-6726b3ff858f');
       background-size: cover;
       background-position: center;
       color: #fff;
@@ -34,6 +45,9 @@
       margin: 0 auto;
     }
 
+    /* =====================
+       SECCIONES GENERALES
+       ===================== */
     section {
       padding: 70px 20px;
       max-width: 1150px;
@@ -47,6 +61,9 @@
       text-align: center;
     }
 
+    /* =====================
+       TARJETAS
+       ===================== */
     .cards {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
@@ -82,6 +99,9 @@
       font-size: 1.1rem;
     }
 
+    /* =====================
+       CTA
+       ===================== */
     .cta {
       background: linear-gradient(135deg, #1e3a8a, #2563eb);
       color: #fff;
@@ -101,12 +121,40 @@
       font-size: 1.05rem;
     }
 
+    /* =====================
+       FOOTER
+       ===================== */
     footer {
       background: #0f172a;
       color: #cbd5e1;
       text-align: center;
       padding: 25px;
       font-size: 0.95rem;
+    }
+
+    /* =====================
+       BOTÓN WHATSAPP
+       ===================== */
+    .whatsapp-float {
+      position: fixed;
+      width: 60px;
+      height: 60px;
+      bottom: 20px;
+      right: 20px;
+      background-color: #25d366;
+      color: #fff;
+      border-radius: 50px;
+      font-size: 30px;
+      box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
+      z-index: 1000;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-decoration: none;
+    }
+
+    .whatsapp-float:hover {
+      background-color: #1ebe5d;
     }
   </style>
 </head>
@@ -117,7 +165,7 @@
   <h1>Orden Financiero para Negocios que Quieren Crecer</h1>
   <p>
     Ayudo a comercios, empresas de servicios y profesionales independientes de países de habla hispana
-    a tener claridad financiera, tomar mejores decisiones y dejar de trabajar a ciegas.
+    a tener claridad financiera y tomar mejores decisiones.
   </p>
 </header>
 
@@ -125,70 +173,45 @@
   <h2>¿Con quién trabajo?</h2>
   <div class="cards">
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1528698827591-e19ccd7bc23d" alt="Comercios">
+      <img src="https://images.unsplash.com/photo-1528698827591-e19ccd7bc23d">
       <h3>Comercios</h3>
-      <p>Tiendas y restaurantes que venden todos los días pero no saben cuánto ganan realmente.</p>
+      <p>Negocios que venden todos los días pero no saben cuánto ganan realmente.</p>
     </div>
-
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d" alt="Servicios">
+      <img src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d">
       <h3>Empresas de Servicios</h3>
-      <p>Negocios que dependen del flujo de caja y necesitan orden financiero para crecer.</p>
+      <p>Necesitan control financiero para crecer sin estrés.</p>
     </div>
-
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1600880292203-757bb62b4baf" alt="Profesionales">
+      <img src="https://images.unsplash.com/photo-1600880292203-757bb62b4baf">
       <h3>Profesionales Independientes</h3>
-      <p>Médicos, abogados y freelancers que quieren separar finanzas personales del negocio.</p>
+      <p>Quieren separar sus finanzas personales del negocio.</p>
     </div>
   </div>
 </section>
 
 <section class="problems">
-  <h2>Problemas que veo todos los días</h2>
+  <h2>Problemas comunes</h2>
   <div class="cards">
-    <div class="card">❌ Mucho trabajo y poco dinero disponible</div>
+    <div class="card">❌ Mucho trabajo y poco dinero</div>
     <div class="card">❌ No saber si el negocio es rentable</div>
-    <div class="card">❌ Mezclar dinero personal con el del negocio</div>
-    <div class="card">❌ Miedo a impuestos y multas</div>
-  </div>
-</section>
-
-<section>
-  <h2>Cómo puedo ayudarte</h2>
-  <div class="cards">
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1556761175-5973dc0f32e7" alt="Diagnóstico">
-      <h3>Diagnóstico Financiero</h3>
-      <p>Análisis completo de tu situación financiera con plan de acción claro.</p>
-    </div>
-
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1520607162513-77705c0f0d4a" alt="Acompañamiento">
-      <h3>Acompañamiento Mensual</h3>
-      <p>Asesoría constante para mantener orden y control financiero.</p>
-    </div>
-
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1551836022-d5d88e9218df" alt="Premium">
-      <h3>Consultoría Premium</h3>
-      <p>Reestructuración financiera profunda para negocios que quieren escalar.</p>
-    </div>
+    <div class="card">❌ Mezclar dinero personal y del negocio</div>
+    <div class="card">❌ Miedo a impuestos</div>
   </div>
 </section>
 
 <section class="cta">
-  <h2>¿Listo para dejar el desorden financiero?</h2>
-  <p>Agenda un diagnóstico financiero y descubre qué está frenando tu negocio.</p>
-
+  <h2>Agenda tu diagnóstico</h2>
+  <p>Descubre qué está frenando el crecimiento de tu negocio.</p>
   <a href="https://forms.gle/Tpa5xL3VKEhJusVD8" target="_blank">
     Agendar Diagnóstico Financiero
   </a>
 </section>
 
 <footer>
-  <p>Consultoría Financiera | Atención 100% en línea para países de habla hispana | © 2026</p>
+  <p>Consultoría Financiera | Atención en línea | © 2026</p>
 </footer>
 
+<a href="https://wa.me/50376393562" class="whatsapp-float" target="_blank">💬</a>
+
 </body>
-</html>
