--- a/index.html
+++ b/index.html
@@ -1,19 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <!-- Definición del conjunto de caracteres para soportar acentos y caracteres especiales -->
   <meta charset="UTF-8" />
-
-  <!-- Hace que el sitio sea responsive (adaptable a móviles, tablets y computadoras) -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <!-- Título que aparece en la pestaña del navegador y en Google -->
   <title>Consultoría Financiera para Pequeños Empresarios</title>
 
   <style>
-    /* =====================
-       ESTILOS GENERALES
-       ===================== */
     body {
       font-family: 'Segoe UI', Arial, sans-serif;
       margin: 0;
@@ -21,9 +13,6 @@
       color: #1f2937;
     }
 
-    /* =====================
-       ENCABEZADO (HERO)
-       ===================== */
     header {
       background: linear-gradient(rgba(15,23,42,0.85), rgba(15,23,42,0.85)),
                   url('https://images.unsplash.com/photo-1554224155-6726b3ff858f');
@@ -125,12 +114,11 @@
       color: #fff;
       border-radius: 50px;
       font-size: 30px;
-      box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
-      z-index: 1000;
       display: flex;
       align-items: center;
       justify-content: center;
       text-decoration: none;
+      box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
     }
   </style>
 </head>
@@ -140,13 +128,52 @@
 <header>
   <h1>Orden Financiero para Negocios que Quieren Crecer</h1>
   <p>
-    Acompaño a micro, pequeños y medianos negocios de países de habla hispana
-    a tener claridad financiera, ordenar su dinero y tomar mejores decisiones,
-    sin complicaciones ni tecnicismos.
+    Acompaño a micro, pequeños y medianos negocios a ordenar sus finanzas
+    y tomar mejores decisiones, sin tecnicismos ni complicaciones.
   </p>
 </header>
 
-<!-- (resto del código exactamente igual al que ves en el canvas) -->
+<section>
+  <h2>¿A quién acompaño?</h2>
+  <div class="cards">
+    <div class="card">
+      <h3>Comercios</h3>
+      <p>Negocios que venden todos los días pero no saben cuánto ganan realmente.</p>
+    </div>
+    <div class="card">
+      <h3>Empresas de Servicios</h3>
+      <p>Negocios que necesitan orden financiero para crecer sin estrés.</p>
+    </div>
+    <div class="card">
+      <h3>Profesionales Independientes</h3>
+      <p>Quieren separar sus finanzas personales del negocio.</p>
+    </div>
+  </div>
+</section>
+
+<section class="problems">
+  <h2>Problemas comunes</h2>
+  <div class="cards">
+    <div class="card">❌ Mucho trabajo y poco dinero</div>
+    <div class="card">❌ No saber si el negocio es rentable</div>
+    <div class="card">❌ Mezclar dinero personal y del negocio</div>
+    <div class="card">❌ Miedo a impuestos</div>
+  </div>
+</section>
+
+<section class="cta">
+  <h2>Da el siguiente paso</h2>
+  <p>Si quieres claridad financiera real, el primer paso es un diagnóstico.</p>
+  <a href="https://forms.gle/Tpa5xL3VKEhJusVD8" target="_blank">
+    Solicitar diagnóstico financiero
+  </a>
+</section>
+
+<footer>
+  <p>Consultoría Financiera | Atención en línea | © 2026</p>
+</footer>
+
+<a href="https://wa.me/50376393562" class="whatsapp-float" target="_blank">💬</a>
 
 </body>
 </html>
